# swarm-rs

./: .gitignore  Cargo.toml  readme.md
swarm-rs/: Cargo.toml
swarm-rs-macros/: Cargo.toml
swarm-rs-macros/src/: lib.rs
swarm-rs/src/: agent.rs  lib.rs  prelude.rs  swarm.rs
swarm-rs/src/llm_agent/: llm_agent.rs  llm_client.rs  llm_message.rs  llm_response.rs  mod.rs
swarm-rs/src/logger/: logger.rs  mod.rs
swarm-rs/src/searx_agent/: mod.rs  searx.rs  searx_agent.rs
swarm-rs/src/utils/: file_io.rs  json_io.rs  mod.rs  time.rs
swarm-rs/src/web/: mod.rs  request_headers.rs  spa_services.rs  web_swarm.rs
swarm-rs/src/web/auth/: auth_agent.rs  auth_headers.rs  mod.rs  passwd.rs  token.rs  user.rs
swarm-rs/test-data/agents/: auth.json  llm_summarizer.json  searxng.json
swarm-rs/tests/: agents_workflow.rs  llm_agent.rs  local_auth_agent.rs  macro_agent.rs  rag_workflow.rs  searx_agent.rs
