[package]
name = "swarm-rs-macros"
version = "0.1.0"
edition = "2021"
authors = ["Riana <riana@kinai.io>"]
repository = "https://github.com/kinai-io/swarm-rs"
license = "MIT"
description = "Macros for swam-rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true