[package]
name = "swarm-rs"
version = "0.1.0"
edition = "2021"
authors = ["Riana <riana@kinai.io>"]
repository = "https://github.com/kinai-io/swarm-rs"
license = "MIT"
description = "A minimalist framework for building agentic workflow"
homepage = "https://github.com/kinai-io/swarm-rs"
keywords = ["api", "framework", "framework", "server", "ai"]
categories = ["web-programming"]


[dependencies]

swarm-rs-macros = { version = "0.1.0"  }

# Base agent framework
async-trait = "0.1"
reqwest = { version ="0.12", features = ["default-tls", "json"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }

# Web
rocket = { version = "0.5.1", features = ["json"] }

# Auth
argon2 = { version = "0.5.3", features = ["password-hash", "alloc"] }
jsonwebtoken = "9.3.0"
chrono = "^0.4"

# Utils
walkdir = "2"
url = "2.5"